Made changes in the different menus and fixed the highscore method